--- a/careers.html
+++ b/careers.html
@@ -295,7 +295,12 @@
             }
 
             /* start careers dvantages */
+            .careers-advantages .row>div:first-of-type .img img {
+                width: 140px;
+            }
+
             @media (max-width: 768px) {
+
                 .careers-advantages p {
                     font-size: 14px;
                 }
@@ -342,7 +347,7 @@
                 }
 
                 .last .text .wrapper {
-                    margin-bottom: 30px;
+                    margin-bottom: 153px;
                 }
             }
         </style>
@@ -459,47 +464,64 @@
                     <div class="col-10 col-lg-6">
                         <div class="d-sm-flex justify-content-start align-items-center mb-5">
                             <div class="img mr-sm-4 text-center text-md-left">
-                                <img class="img-fluid" src="./new-imgs/online-learning.svg" alt="online-learning">
+                                <img src="./new-imgs/online-learning.svg" alt="online-learning">
                             </div>
                             <div class="text">
                                 <h4 class="my-3 text-center text-sm-left">التدريب</h4>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">صناعة مسار تدريبي
-                                    مصمم
-                                    لمؤسستك</p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">شهادة إتمام البرنامج
-                                    التدريبي</p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">شهادة إتمام البرنامج
-                                    التدريبي</p>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">صناعة مسار تدريبي مصمم لمؤسستك</p>
+                                </div>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">شهادة إتمام البرنامج التدريبي</p>
+                                </div>
+
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">شهادة إتمام البرنامج التدريبي</p>
+                                </div>
                             </div>
                         </div>
                         <div class="d-sm-flex justify-content-start align-items-center mb-5">
                             <div class="img mr-sm-4 text-center text-md-left">
-                                <img class="img-fluid" src="./new-imgs/kindness.svg" alt="kindness">
+                                <img src="./new-imgs/kindness.svg" alt="kindness">
                             </div>
                             <div class="text">
                                 <h4 class="my-3 text-center text-sm-left">خدمة المتدرب</h4>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الدعم الفني</p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الاجابة على أسئلة
-                                    المتدرب من قبل متخصصين ذو خبرة</p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">الوصول الى جميع
-                                    المحاضرات التدريبية السابقة</p>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">الدعم الفني</p>
+                                </div>
+
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">الاجابة على أسئلةالمتدرب من قبل متخصصين ذو خبرة</p>
+                                </div>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">الوصول الى جميع المحاضرات التدريبية السابقة</p>
+                                </div>
                             </div>
                         </div>
                         <div class="d-sm-flex justify-content-start align-items-center mb-5">
                             <div class="img mr-sm-4 text-center text-sm-left">
-                                <img class="img-fluid" src="./new-imgs/social-care.svg" alt="social-care">
+                                <img src="./new-imgs/social-care.svg" alt="social-care">
                             </div>
                             <div class="text">
                                 <h4 class="my-3 text-center text-md-left">خدمات للمؤسسات</h4>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تقديم البرنامج
-                                    التدريبي
-                                    وفق التوقيت المناسب للمؤسسة</p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تطوير المناهج
-                                    ومراجعتها
-                                </p>
-                                <p><img class="mr-2" src="./new-imgs/checked.svg" alt="checked">تقرير خاص لكل متدرب
-                                    خلال
-                                    فترة التدريب</p>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">تقديم البرنامج التدريبي وفق التوقيت المناسب للمؤسسة</p>
+                                </div>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">تطوير المناهج ومراجعتها</p>
+                                </div>
+                                <div class="d-flex align-items-center mb-3">
+                                    <img class="mr-2" src="./new-imgs/checked.svg" alt="checked">
+                                    <p class="mb-0">تقرير خاص لكل متدربخلال فترة التدريب</p>
+                                </div>
                             </div>
                         </div>
                     </div>
