--- a/home.html
+++ b/home.html
@@ -373,8 +373,11 @@
                 flex-basis: 100%;
             }
 
-
             @media (min-width: 991px) {
+                .features {
+                    background: none;
+                }
+
                 .features .one-feature {
                     margin-top: 0;
                     display: block;
@@ -635,6 +638,12 @@
             .help {
                 margin-top: 150px;
                 margin-bottom: 51px;
+            }
+
+            @media (max-width: 576px) {
+                .help .logo img {
+                    width: 135px;
+                }
             }
         </style>
     </head>
@@ -1143,7 +1152,7 @@
                         <div class="vertical-divider h-100"></div>
                     </div>
                     <div class="col-12 col-md-2 mb-4 mb-md-0">
-                        <div class="wrapper">
+                        <div class="wrapper logo">
                             <img class="img-fluid" src="./new-imgs/help-logo.svg" alt="logo">
                         </div>
                     </div>
