adding kids and edit home

--- a/home.html
+++ b/home.html
@@ -623,7 +623,7 @@
             @media (max-width: 575px) {
 
                 .testemonials .testems .one-testem .img {
-                    max-width: 40px;
+                    min-width: 35px;
                 }
             }
 
