finishing the kids

--- a/kids.html
+++ b/kids.html
@@ -628,7 +628,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 img-wrapper img-right">
                         <div class="img">
-                            <img src="./new-imgs/row-2-kids.png" alt="row1" class="img-fluid">
+                            <img src="./new-imgs/row-2-kids.svg" alt="row1" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
