changing images and edit features

--- a/kids.html
+++ b/kids.html
@@ -139,7 +139,7 @@
 
             .intro .intro-text .text {
                 width: 100%;
-                padding-top: 117px;
+                padding: 50px 0;
             }
 
             @media (min-width: 1200px) {
@@ -163,27 +163,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                border: 1px solid #e3e3e3;
+                border-radius: 6px;
             }
 
-            .features div[class^="col-"]:first-of-type .item>div {
-                background: rgba(254, 98, 59, 0.16);
-                border-bottom-right-radius: 80px;
-            }
-
-            .features div[class^="col-"]:nth-child(2) .item>div {
-                background: rgba(255, 183, 49, 0.16);
-                border-bottom-right-radius: 80px;
-            }
-
-            .features div[class^="col-"]:nth-child(3) .item>div {
-                background: rgba(37, 203, 248, 0.16);
-                border-bottom-left-radius: 80px;
-            }
-
-            .features div[class^="col-"]:last-of-type .item>div {
-                background: rgba(149, 88, 202, 0.16);
-                border-bottom-left-radius: 80px;
-            }
 
             @media (max-width: 575px) {
                 .features .item>div {
@@ -446,7 +429,7 @@
                 <div class="row align-items-center justify-content-center justify-content-lg-between ">
                     <div class="intro-img col-12 col-xl-9 order-1 order-xl-0">
                         <div class="img h-100 d-flex align-items-end">
-                            <img class="img-fluid" src="./new-imgs/kids-intro.svg" alt="kids">
+                            <img class="img-fluid w-100" src="./new-imgs/kids-intro.svg" alt="kids">
                         </div>
                     </div>
                     <div
