--- a/kids.html
+++ b/kids.html
@@ -120,6 +120,7 @@
             .intro {
                 background: url(./new-imgs/intro-background.svg) no-repeat;
                 background-size: cover;
+                background-position: 0% 100%;
                 margin-top: 0;
             }
 
@@ -139,7 +140,7 @@
 
             .intro .intro-text .text {
                 width: 100%;
-                padding: 50px 0;
+                padding: 150px 0 50px;
             }
 
             @media (min-width: 1200px) {
@@ -158,8 +159,8 @@
             /* start features */
 
             .features .item>div {
-                padding: 72px 0;
-                height: 297px;
+                padding: 54px;
+                height: 246px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -167,6 +168,16 @@
                 border-radius: 6px;
             }
 
+            .features .item .img img {
+                width: 118px;
+            }
+
+
+            @media (min-width: 1200px) {
+                .features .item {
+                    padding: 0 27px;
+                }
+            }
 
             @media (max-width: 575px) {
                 .features .item>div {
@@ -197,6 +208,18 @@
                 font-weight: bold;
             }
 
+            .video .heading .logo img {
+                width: 100px;
+            }
+
+            .video .heading h1 p:last-of-type {
+                font-size: 1.5rem;
+            }
+
+            .video .row [class^="col-"]:first-of-type {
+                padding-bottom: 50px;
+            }
+
             .video .details h6 {
                 margin: 10px 0;
             }
@@ -212,6 +235,10 @@
 
             .video .video-rating .streaming span {
                 margin-left: 6px;
+            }
+
+            .video .video-rating small {
+                font-weight: bold;
             }
 
             .video .buttons {
@@ -426,14 +453,14 @@
     <body>
         <section class="intro">
             <div class="container">
-                <div class="row align-items-center justify-content-center justify-content-lg-between ">
-                    <div class="intro-img col-12 col-xl-9 order-1 order-xl-0">
-                        <div class="img h-100 d-flex align-items-end">
+                <div class="row align-items-center justify-content-center ">
+                    <div class="intro-img col-10  col-xl-8 order-1 order-xl-0">
+                        <div class="img h-100 d-flex align-items-end pb-2">
                             <img class="img-fluid w-100" src="./new-imgs/kids-intro.svg" alt="kids">
                         </div>
                     </div>
                     <div
-                        class="intro-text col-12 col-xl-3 d-flex justify-content-center justify-content-lg-end text-center ">
+                        class="intro-text col-12  col-xl-4 d-flex justify-content-center justify-content-lg-end text-center ">
                         <div class="text">
                             <h2 class="font-weight-bold">
                                 كورسنتلي أطفال
@@ -450,12 +477,12 @@
         </section>
         <section class="features text-center">
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-around">
                     <div class="col-6 col-sm-6 col-lg-3 mt-4 mt-lg-0">
                         <div class="item">
                             <div>
                                 <div class="img">
-                                    <img src="./new-imgs/presentation.svg" alt="presentation">
+                                    <img class="img-fluid" src="./new-imgs/presentation.svg" alt="presentation">
                                 </div>
                             </div>
                             <h6 class="mt-4">فصول مباشرة</h6>
@@ -465,7 +492,7 @@
                         <div class="item">
                             <div>
                                 <div class="img">
-                                    <img src="./new-imgs/report.svg" alt="report">
+                                    <img class="img-fluid" src="./new-imgs/report.svg" alt="report">
                                 </div>
                             </div>
                             <h6 class="mt-4">تقارير دورية</h6>
@@ -475,7 +502,7 @@
                         <div class="item">
                             <div>
                                 <div class="img">
-                                    <img src="./new-imgs/theatre.svg" alt="theatre">
+                                    <img class="img-fluid" src="./new-imgs/theatre.svg" alt="theatre">
                                 </div>
                             </div>
                             <h6 class="mt-4">منهج مرح للتعلم</h6>
@@ -485,7 +512,7 @@
                         <div class="item">
                             <div>
                                 <div class="img">
-                                    <img src="./new-imgs/facebook.svg" alt="facebook">
+                                    <img class="img-fluid" src="./new-imgs/facebook.svg" alt="facebook">
                                 </div>
                             </div>
                             <h6 class="mt-4">دروس مسجلة</h6>
@@ -514,8 +541,14 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 order-1 order-lg-0  mt-2 mt-lg-0">
                         <div class="heading d-none d-lg-flex justify-content-between">
-                            <div>
-                                <h1>دبلوم احتراف الموشن جرافيك <br /> Professional Diploma of Motion Graphics</h1>
+                            <div class="d-flex ">
+                                <div class="img mr-3 logo">
+                                    <img src="./new-imgs/vid-logo.svg" alt="logo">
+                                </div>
+                                <h1>
+                                    <p>دبلوم احتراف الموشن جرافيك</p>
+                                    <p>Diploma of Motion Graphics</p>
+                                </h1>
                             </div>
                         </div>
                         <div class="video-rating d-none d-lg-flex align-items-center">
@@ -545,9 +578,15 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <div class="heading d-flex d-lg-none justify-content-between">
-                            <div>
-                                <h1>دبلوم احتراف الموشن جرافيك <br /> Professional Diploma of Motion Graphics</h1>
+                        <div class="heading mb-3 d-flex d-lg-none justify-content-between">
+                            <div class="d-md-flex align-items-center">
+                                <div class="img mr-3 logo mb-3 mb-md-0 text-center text-align-md-none">
+                                    <img src="./new-imgs/vid-logo.svg" alt="logo">
+                                </div>
+                                <h1>
+                                    <p>دبلوم احتراف الموشن جرافيك</p>
+                                    <p>Diploma of Motion Graphics</p>
+                                </h1>
                             </div>
                         </div>
                         <div class="video-rating  d-flex d-lg-none align-items-center  mb-3 mb-lg-0">
