--- a/kids.html
+++ b/kids.html
@@ -386,6 +386,8 @@
 
                 .kids .qoute {
                     width: 49px;
+                    position: absolute;
+                    left: 29px;
                 }
             }
 
