the fucking qoute

--- a/kids.html
+++ b/kids.html
@@ -702,8 +702,8 @@
                             <img src="./new-imgs/row-4-kids.svg" alt="row1" class="img-fluid">
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6">
-                        <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left">
+                    <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+                        <div class="wrapper mb-5 mb-lg-0 text-center text-lg-left d-flex justify-content-center">
                             <div class="text">
                                 <h2>نجاح طفلك يصنع المستقبل</h2>
                                 <img class="mb-3" src="./new-imgs/underline.svg" alt="underline">
