--- a/kids.html
+++ b/kids.html
@@ -109,6 +109,10 @@
 
             @media (max-width: 575px) {
 
+                .intro .intro-img {
+                    margin-left: -29px;
+                }
+
                 .divider::before,
                 .divider::after {
                     width: 100px;
@@ -457,7 +461,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center ">
                     <div class="intro-img col-10  col-xl-8 order-1 order-xl-0">
-                        <div class="img h-100 d-flex align-items-end pb-2">
+                        <div class="img h-100 d-flex align-items-center pb-2">
                             <img class="img-fluid w-100" src="./new-imgs/kids-intro.svg" alt="kids">
                         </div>
                     </div>
