fix icon features

--- a/kids.html
+++ b/kids.html
@@ -186,6 +186,7 @@
             @media (max-width: 575px) {
                 .features .item>div {
                     height: 250px;
+                    padding: 0;
                 }
 
                 .features .item .img img {
